Fixing config z-index

--- a/css/style.css
+++ b/css/style.css
@@ -145,7 +145,7 @@ header{
 
 #config{
   position: absolute;
-  z-index: 1;
+  z-index: 10;
   right: 0;
   top: 92px;
   background: #eee;
